--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
 <body>
 
   <nav id="backgroundnav" role="navigation">
+    <a id="logo-container" href="#" class="brand-logo">pulsmin</a>
     <div class="nav-wrapper">
 
       <ul class="right hide-on-med-and-down">
@@ -36,7 +37,7 @@
         <li><a href="#">Aktuelles</a></li>
         <li><a href="#">Kontakt</a></li>
       </ul>
-      <a href="#" data-target="nav-mobile" class="sidenav-trigger"><i class="material-icons"  id="backgroundnav">menu</i></a>
+      <a href="#" data-target="nav-mobile" class="sidenav-trigger"><i class="material-icons"  id="backgroundmenu">menu</i></a>
     </div>
   </nav>
 
