improve font-color footer

--- a/index.html
+++ b/index.html
@@ -131,7 +131,7 @@
     </div>
 
 <!--Footer-->
-<footer class="page-footer indigo lighten-2">
+<footer class="page-footer indigo lighten-2 indigo-text text-lighten-5">
     <div class="fontSizeStandartTitle center-align footerItem">
         <span>Get In Touch</span>
     </div>
