--- a/index.html
+++ b/index.html
@@ -19,10 +19,13 @@
         .fontSizeStandartTitle{
             font-size: 2rem;
         }
-        .box{
+        .titleBox{ /*(Titelboxen)*/
             padding: 0.5rem;
             margin-top: 1rem;
             margin-bottom: 1rem;
+        }
+        .cardBox{
+            padding: 0.5rem;
         }
         .kontaktBox{
             padding: 2rem;
@@ -42,13 +45,22 @@
 
 /*--------------------Grössenanpassungen-----------------------*/
 
-/*SMALL*/
+/*SMALL (mobile)*/
         @media only screen and (max-width : 600px) {
             .fontSizeStandartTitle{
                 font-size: 1.5rem;
             }
             h1{
                 font-size: 2rem;
+            }
+            .visible_m_l_xl{
+                display: none;
+            }
+        }
+/*GRÖSSER ALS SMALL*/
+        @media only screen and (min-width : 601px) {
+            .visible_s{
+                display: none;
             }
         }
 /*--------------------------------------------------------------*/
@@ -116,15 +128,15 @@
     </div>
 
 <!--Anwendungsgebiete-->
-    <div class="container blue1 blue1-text text-light2 box fontSizeStandartTitle center-align">
+    <div class="container blue1 blue1-text text-light2 titleBox fontSizeStandartTitle center-align">
         <span>Anwendungsgebiete</span>
     </div>
 
 <!--Alleinstellungsmerkmale-->
-<div class="container col s12 m7">
+<div class="container col s12 m7 visible_m_l_xl">
     <div class="card horizontal">
         <div class="card-image valign-wrapper blue1 light">
-            <div class="box fontSizeStandartTitle">
+            <div class="cardBox">
                 <i class="material-icons md-56 amber-text">star_border</i>
             </div>
         </div>
@@ -141,19 +153,42 @@
     </div>
 </div>
 
+<div class=" container col s12 m7 visible_s">
+    <div class="card">
+        <div class="card-image valign-wrapper blue1 light">
+            <div class="cardBox center-align">
+                <div class="center">
+                    <i class="material-icons md-56 amber-text">star_border</i>
+                </div>
+            </div>
+        </div>
+        <div class="card-content">
+            <span class="fontSizeStandartTitle">Alleinstellungsmerkmale</span>
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
+                Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+        </div>
+        <div class="card-action">
+            <a href="#">Hier finden Sie alle Vorteile im Überblick</a>
+        </div>
+    </div>
+</div>
+
+
+
+
 <!--Vorteile-->
-    <div class="container blue1 blue1-text text-light2 box fontSizeStandartTitle center-align">
+    <div class="container blue1 blue1-text text-light2 titleBox fontSizeStandartTitle center-align">
         <span>Vorteile</span>
     </div>
 
 
 <!--Technische Angaben-->
-    <div class="container blue1 blue1-text text-light2 box fontSizeStandartTitle center-align">
+    <div class="container blue1 blue1-text text-light2 titleBox fontSizeStandartTitle center-align">
         <span>Technische Angaben</span>
     </div>
 
 <!--Aktuelles-->
-    <div class="container amber lighten-1 amber-text text-lighten-5 box fontSizeStandartTitle center-align">
+    <div class="container amber lighten-1 amber-text text-lighten-5 titleBox fontSizeStandartTitle center-align">
         <span>Aktuelles</span>
     </div>
 
