move css into external file

--- a/index.html
+++ b/index.html
@@ -16,102 +16,12 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
 
     <style>
-        .fontSizeStandartTitle{
-            font-size: 2rem;
-        }
-        .titleBox{ /*(Titelboxen)*/
-            padding: 0.5rem;
-            margin-top: 1rem;
-            margin-bottom: 1rem;
-        }
-        .cardBox{
-            padding: 0.5rem;
-        }
-        .kontaktBox{
-            padding: 2rem;
-        }
-        .contactSpace{
-            padding: 2px;
-        }
-        .size-100{
-            height: 100px !important;
-        }
-        .footerItem{
-            margin-bottom: 24px;
-        }
-        h1{
-            font-size: 3rem;
-        }
-
-/*--------------------Grössenanpassungen-----------------------*/
-
-/*SMALL (mobile)*/
-        @media only screen and (max-width : 600px) {
-            .fontSizeStandartTitle{
-                font-size: 1.5rem;
-            }
-            h1{
-                font-size: 2rem;
-            }
-            .visible_m_l_xl{
-                display: none;
-            }
-        }
-/*GRÖSSER ALS SMALL*/
-        @media only screen and (min-width : 601px) {
-            .visible_s{
-                display: none;
-            }
-        }
-/*--------------------------------------------------------------*/
-
-
-
-/*--------------------------Farben--------------------------*/
-        .blue1{
-            background-color: #296692;
-        }
-        .blue1-text{
-            color: #296692;
-        }
-        .blue1.dark{
-            background-color: #23577d !important;
-        }
-        .blue1-text.text-dark{
-            color: #23577d !important;
-        }
-        .blue1-text.text-light{
-            color: #e1ebf2 !important;
-        }
-        .blue1.light{
-            background-color: #e1ebf2 !important;
-        }
-        .blue1-text.text-light2{
-            color: #edf5fa !important;
-        }
-        .blue1.light2{
-            background-color: #edf5fa !important;
-        }
-/*-----------------------------------------------------------*/
-
-/*-----------------CSS von material-icons---------------*/
-        /* Rules for sizing the icon. */
-        .material-icons.md-18 { font-size: 18px; }
-        .material-icons.md-24 { font-size: 24px; }
-        .material-icons.md-36 { font-size: 36px; }
-        .material-icons.md-48 { font-size: 48px; }
-        .material-icons.md-56 { font-size: 56px; }
-
-        /* Rules for using icons as black on a light background. */
-        .material-icons.md-dark { color: rgba(0, 0, 0, 0.54); }
-        .material-icons.md-dark.md-inactive { color: rgba(0, 0, 0, 0.26); }
-
-        /* Rules for using icons as white on a dark background. */
-        .material-icons.md-light { color: rgba(255, 255, 255, 1); }
-        .material-icons.md-light.md-inactive { color: rgba(255, 255, 255, 0.3); }
-/*-------------------------------------------------------*/
     </style>
 
+    <!-- CSS  -->
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+    <link href="css/materialize.css" type="text/css" rel="stylesheet" media="screen,projection"/>
+    <link href="css/style.css" type="text/css" rel="stylesheet" media="screen,projection"/>
 </head>
 <body>
 
