--- a/advantages.html
+++ b/advantages.html
@@ -70,18 +70,16 @@
 </div>
 <div id="vorteile_container">
     <div id="vorteile_header">
-
         <div class="container">
             <div class="section">
                 <div class="row">
                     <div class="col s12 center">
-                        <h4 class="titlerec">Vorteile</h4>
+                        <h4 id="titlerec">Vorteile</h4>
                     </div>
                 </div>
 
             </div>
         </div>
-
         <div id="vorteile_icons">
             <div class="container">
                 <div class="section">
@@ -114,6 +112,7 @@
             </div>
         </div>
     </div>
+
     <div id="vorteile_text">
         <div class="container">
             <div class="section">
