icons mit materialize icons ersetzt

--- a/advantages.html
+++ b/advantages.html
@@ -10,6 +10,8 @@
     <link href="css/materialize.css" type="text/css" rel="stylesheet" media="screen,projection"/>
     <link href="css/style.css" type="text/css" rel="stylesheet" media="screen,projection"/>
     <link href="css/advantages.css" type="text/css" rel="stylesheet" media="screen,projection"/>
+    <!-- Icons -->
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 
     <!-- JAVASCRIPT -->
     <script type="text/javascript" src="js/advantages.js"></script>
@@ -121,8 +123,8 @@
                         <div class="col s12">
                             <div onclick='showfunction("umweltschutz", "plus_icon1", "minus_icon1")'>
                                 <h4 class="showhidetitle">Umweltschutz</h4>
-                                <img class="icon" id="plus_icon1" src="advantages_images/plus.png">
-                                <img class="icon" id="minus_icon1" src="advantages_images/minus.png">
+                                <i class="material-icons" id="plus_icon1">add</i>
+                                <i class="material-icons" id="minus_icon1">remove</i>
                             </div>
                         </div>
                     </div>
@@ -175,8 +177,8 @@
                         <div class="col s12">
                             <div onclick='showfunction("vorteil2", "plus_icon2", "minus_icon2")'>
                                 <h4 class="showhidetitle">Vorteil 2</h4>
-                                <img class="icon" id="plus_icon2" src="advantages_images/plus.png">
-                                <img class="icon" id="minus_icon2" src="advantages_images/minus.png">
+                                <i class="material-icons" id="plus_icon2">add</i>
+                                <i class="material-icons" id="minus_icon2">remove</i>
                             </div>
                         </div>
                     </div>
@@ -228,8 +230,8 @@
                         <div class="col s12">
                             <div onclick='showfunction("vorteil3", "plus_icon3", "minus_icon3")'>
                                 <h4 class="showhidetitle">Vorteil 3</h4>
-                                <img class="icon" id="plus_icon3" src="advantages_images/plus.png">
-                                <img class="icon" id="minus_icon3" src="advantages_images/minus.png">
+                                <i class="material-icons" id="plus_icon3">add</i>
+                                <i class="material-icons" id="minus_icon3">remove</i>
                             </div>
                         </div>
                     </div>
@@ -281,8 +283,8 @@
                         <div class="col s12">
                             <div onclick='showfunction("vorteil4", "plus_icon4", "minus_icon4")'>
                                 <h4 class="showhidetitle">Vorteil 4</h4>
-                                <img class="icon" id="plus_icon4" src="advantages_images/plus.png">
-                                <img class="icon" id="minus_icon4" src="advantages_images/minus.png">
+                                <i class="material-icons" id="plus_icon4">add</i>
+                                <i class="material-icons" id="minus_icon4">remove</i>
                             </div>
                         </div>
                     </div>
@@ -334,8 +336,8 @@
                         <div class="col s12">
                             <div onclick='showfunction("vorteil5", "plus_icon5", "minus_icon5")'>
                                 <h4 class="showhidetitle">Vorteil 5</h4>
-                                <img class="icon" id="plus_icon5" src="advantages_images/plus.png">
-                                <img class="icon" id="minus_icon5" src="advantages_images/minus.png">
+                                <i class="material-icons" id="plus_icon5">add</i>
+                                <i class="material-icons" id="minus_icon5">remove</i>
                             </div>
                         </div>
                     </div>
@@ -387,8 +389,8 @@
                         <div class="col s12">
                             <div onclick='showfunction("vorteil6", "plus_icon6", "minus_icon6")'>
                                 <h4 class="showhidetitle">Vorteil 6</h4>
-                                <img class="icon" id="plus_icon6" src="advantages_images/plus.png">
-                                <img class="icon" id="minus_icon6" src="advantages_images/minus.png">
+                                <i class="material-icons" id="plus_icon6">add</i>
+                                <i class="material-icons" id="minus_icon6">remove</i>
                             </div>
                         </div>
                     </div>
