--- a/index.html
+++ b/index.html
@@ -30,14 +30,14 @@
     <a id="logo-container" href="#" class="brand-logo">pulsmin</a>
     <div class="nav-wrapper">
 
-        <ul class="right hide-on-med-and-down">
+        <ul class="hide-on-med-and-down">
             <li><a class="logo" href="#">pulsmin</a></li>
             <li><a href="#">Start</a></li>
             <li><a href="#">Anwendungsgebiete</a></li>
             <li><a href="#">Alleinstellungsmerkmale</a></li>
             <li><a href="#">Vorteile</a></li>
             <li><a href="#">Technische Angaben</a></li>
-            <li><a href="#">Aktuelles</a></li>
+            <li><a href="aktuelles.html">Aktuelles</a></li>
             <li><a href="#">Kontakt</a></li>
         </ul>
 
@@ -48,7 +48,7 @@
             <li><a href="#">Alleinstellungsmerkmale</a></li>
             <li><a href="#">Vorteile</a></li>
             <li><a href="#">Technische Angaben</a></li>
-            <li><a href="#">Aktuelles</a></li>
+            <li><a href="aktuelles.html">Aktuelles</a></li>
             <li><a href="#">Kontakt</a></li>
         </ul>
         <a href="#" data-target="nav-mobile" class="sidenav-trigger"><i class="material-icons"  id="backgroundmenu">menu</i></a>
@@ -191,7 +191,7 @@
 
     <div class="footer-copyright">
         <div class="container center-align">
-            Made by <span class="brown-text text-lighten-4"> Lagger Dominique, Tsypkaykina Anastasia & Louisa Reinger</span>
+            Made by <span class="brown-text text-lighten-4"> Lagger Dominique, Tsypkaykina Anastasia & Reinger Lousia</span>
         </div>
     </div>
 
