added aktuelles to index

--- a/aktuelles.html
+++ b/aktuelles.html
@@ -39,7 +39,7 @@
                                                                         id="backgroundmenu">menu</i></a>
     </div>
 </nav>
-<div class="container yellow1 blue1-text text-light2 titleBox fontSizeStandartTitle center-align">
+<div class="container amber lighten-1 amber-text text-lighten-5 titleBox fontSizeStandartTitle center-align">
     <span>Aktuelles</span>
 </div>
 
@@ -47,7 +47,7 @@
 <div class="container">
     <div class="section">
         <div class="row postbackground">
-            <div class="col s12 m5 l5"><img class="blogimage" src="img/aktuelles_images/InnoTrans2020.jpg"></div>
+            <div class="col s12 m5 l5"><img class="blogimageindex" src="img/aktuelles_images/InnoTrans2020.jpg"></div>
             <div class="col s12 m7 l7">
                 <p class="blogtitle">Messeautritt InnoTrans 2020</p>
                 <a href="blogposts/blogpost1/blogpost1.html" class="weiterlesen">weiterlesen</a>
