--- a/index.html
+++ b/index.html
@@ -9,7 +9,8 @@
     <!--Import Google Icon Font-->
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <!-- font awesome -->
-    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.0.13/css/all.css" integrity="sha384-DNOHZ68U8hZfKXOrtjWvjxusGo9WQnrNx2sqG0tfsghAvtVlRW3tvkXWZh58N9jp" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.0.13/css/all.css"
+          integrity="sha384-DNOHZ68U8hZfKXOrtjWvjxusGo9WQnrNx2sqG0tfsghAvtVlRW3tvkXWZh58N9jp" crossorigin="anonymous">
     <!-- Compiled and minified CSS -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
     <!-- Compiled and minified JavaScript -->
@@ -23,9 +24,9 @@
     <link href="css/materialize.css" type="text/css" rel="stylesheet" media="screen,projection"/>
     <link href="css/style.css" type="text/css" rel="stylesheet" media="screen,projection"/>
 
-  </head>
-  <body>
-  <!--Header-->
+</head>
+<body>
+<!--Header-->
 <nav id="backgroundnav" role="navigation">
     <a id="logo-container" href="#" class="brand-logo">pulsmin</a>
     <div class="nav-wrapper">
@@ -51,23 +52,24 @@
             <li><a href="aktuelles.html">Aktuelles</a></li>
             <li><a href="#">Kontakt</a></li>
         </ul>
-        <a href="#" data-target="nav-mobile" class="sidenav-trigger"><i class="material-icons"  id="backgroundmenu">menu</i></a>
+        <a href="#" data-target="nav-mobile" class="sidenav-trigger"><i class="material-icons"
+                                                                        id="backgroundmenu">menu</i></a>
     </div>
 </nav>
 <!--TODO: Der komplette Body muss noch mit den richtigen Bildern und Texten gefüllt werden!-->
 
 <!--Startbildschirm-->
-    <div class="container">
-        <div class="center-align">
-            <img src="img/Bild1.png" alt="Kompressor" class="responsive-img">
-            <h1 class="center-align blue1-text">Wir reden nicht von Umweltschutz, wir machen Umweltschutz!</h1>
-        </div>
+<div class="container">
+    <div class="center-align">
+        <img src="img/Bild1.png" alt="Kompressor" class="responsive-img">
+        <h1 class="center-align blue1-text">Wir reden nicht von Umweltschutz, wir machen Umweltschutz!</h1>
     </div>
+</div>
 
 <!--Anwendungsgebiete-->
-    <div class="container blue1 blue1-text text-light2 titleBox fontSizeStandartTitle center-align">
-        <span>Anwendungsgebiete</span>
-    </div>
+<div class="container blue1 blue1-text text-light2 titleBox fontSizeStandartTitle center-align">
+    <span>Anwendungsgebiete</span>
+</div>
 
 <!--Alleinstellungsmerkmale-->
 <div class="container col s12 m7 visible_m_l_xl">
@@ -80,8 +82,10 @@
         <div class="card-stacked">
             <div class="card-content">
                 <span class="fontSizeStandartTitle">Alleinstellungsmerkmale</span>
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
-                    Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore
+                    et dolore magna aliqua.
+                    Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+                    consequat.</p>
             </div>
             <div class="card-action">
                 <a href="#">Hier finden Sie alle Vorteile im Überblick</a>
@@ -101,8 +105,10 @@
         </div>
         <div class="card-content">
             <span class="fontSizeStandartTitle">Alleinstellungsmerkmale</span>
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
-                Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et
+                dolore magna aliqua.
+                Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+                consequat.</p>
         </div>
         <div class="card-action">
             <a href="#">Hier finden Sie alle Vorteile im Überblick</a>
@@ -111,36 +117,63 @@
 </div>
 
 
-
-
 <!--Vorteile-->
-    <div class="container blue1 blue1-text text-light2 titleBox fontSizeStandartTitle center-align">
-        <span>Vorteile</span>
-    </div>
+<div class="container blue1 blue1-text text-light2 titleBox fontSizeStandartTitle center-align">
+    <span>Vorteile</span>
+</div>
 
 
 <!--Technische Angaben-->
-    <div class="container blue1 blue1-text text-light2 titleBox fontSizeStandartTitle center-align">
-        <span>Technische Angaben</span>
-    </div>
+<div class="container blue1 blue1-text text-light2 titleBox fontSizeStandartTitle center-align">
+    <span>Technische Angaben</span>
+</div>
 
 <!--Aktuelles-->
+<a href="aktuelles.html">
     <div class="container amber lighten-1 amber-text text-lighten-5 titleBox fontSizeStandartTitle center-align">
         <span>Aktuelles</span>
     </div>
+</a>
+<div class="aktuellesindex">
+    <div class="container">
+        <div class="section">
+            <div class="row">
+                <!--Blogpost1-->
+                <div class="col s12 m4 l4">
+                    <img class="blogimageindex" src="img/aktuelles_images/InnoTrans2020.jpg">
+                    <p class="blogtitleindex">Messeautritt InnoTrans 2020</p>
+                    <a href="blogposts/blogpost1/blogpost1.html" class="weiterlesenindex">weiterlesen</a>
 
-<!--Kontakt-->
-    <div class="blue1 light2">
-        <div class="container kontaktBox center-align">
-            <p>Haben Sie weitere Fragen zum Produkt?</p>
-
-            <a href = "mailto: abc@example.com" class="btn amber waves-effect waves-light">
-                <span>Email</span>
-                <i class="material-icons right">send</i>
-            </a>
-
+                </div>
+                <!--Blogpost2-->
+                <div class="col s12 m4 l4">
+                    <img class="blogimageindex" src="img/aktuelles_images/Artikel_Fachzeitschrift.png">
+                    <p class="blogtitleindex">Artikel in der Fachzeitschrift MM MaschienenMarkt</p>
+                    <a href="blogposts/blogpost2/blogpost2.html" class="weiterlesenindex">weiterlesen</a>
+                </div>
+                <!--Blogpost3-->
+                <div class="col s12 m4 l4">
+                    <img class="blogimageindex" src="img/aktuelles_images/Fischer_Erfinderpreis_2019.jpg">
+                    <p class="blogtitleindex">Teilnahme Artur Fischer Erfinderpreis Baden-Württemberg 2019</p>
+                    <a href="blogposts/blogpost3/blogpost3.html" class="weiterlesenindex">weiterlesen</a>
+                </div>
+            </div>
         </div>
     </div>
+</div>
+
+<!--Kontakt-->
+<div class="blue1 light2">
+    <div class="container kontaktBox center-align">
+        <p>Haben Sie weitere Fragen zum Produkt?</p>
+
+        <a href="mailto: abc@example.com" class="btn amber waves-effect waves-light">
+            <span>Email</span>
+            <i class="material-icons right">send</i>
+        </a>
+
+    </div>
+</div>
 
 <!--Footer-->
 <footer class="page-footer blue1 blue1-text text-light2">
@@ -191,14 +224,15 @@
 
     <div class="footer-copyright">
         <div class="container center-align">
-            Made by <span class="brown-text text-lighten-4"> Lagger Dominique, Tsypkaykina Anastasia & Reinger Lousia</span>
+            Made by <span
+                class="brown-text text-lighten-4"> Lagger Dominique, Tsypkaykina Anastasia & Reinger Lousia</span>
         </div>
     </div>
 
 </footer>
-  <!--  Scripts-->
-  <script src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
-  <script src="js/materialize.js"></script>
-  <script src="js/init.js"></script>
+<!--  Scripts-->
+<script src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
+<script src="js/materialize.js"></script>
+<script src="js/init.js"></script>
 </body>
 </html>
