--- a/index.html
+++ b/index.html
@@ -471,22 +471,43 @@
 <div class="container">
     <div class="section">
         <div class="row">
-<div class="carousel" id="images_carousel">
-    <a class="carousel-item" href="#one!"><img src="img/technisch_images/Explosionsdarstellung.PNG"></a>
-    <a class="carousel-item" href="#two!"><img src="img/technisch_images/Kompressor.PNG"></a>
-    <a class="carousel-item" href="#three!"><img src="img/technisch_images/Kompressor_Seite.PNG"></a>
-    <a class="carousel-item" href="#four!"><img src="img/technisch_images/Kompressor_Stufe.PNG"></a>
-    <a class="carousel-item" href="#five!"><img src="img/technisch_images/Kompressor_Unterseite.PNG"></a>
+  <div class="slider" id="slider_images">
+    <ul class="slides">
+      <li>
+        <img src="img/technisch_images/Explosionsdarstellung.PNG"> 
+        <div class="caption left-align">
+          <h3>Explosionsdarstellung</h3>
+        </div>
+      </li>
+      <li>
+        <img src="img/technisch_images/Kompressor_Seite.PNG"> 
+        <div class="caption center-align">
+          <h3>Kompressor von der Seite</h3>
+        </div>
+      </li>
+      
+      <li>
+        <img src="img/technisch_images/Kompressor_Seitenansicht.PNG"> 
+        <div class="caption left-align">
+          <h3>Kompressor von der Seite</h3>
+        </div>
+      </li>
+      <li>
+        <img src="img/technisch_images/Kompressor_Stufe.PNG"> 
+        <div class="caption center-align">
+          <h3>Stufe des Kompressors</h3>
+        </div>
+      </li>
+    </ul>
   </div>
- </div>
+            </div>
         </div>
     </div>
-<script>
-        $(document).ready(function(){
-            $('#images_carousel').carousel();
+  <script>  
+    $(document).ready(function(){
+        $('#slider_images').slider();
     });
-</script>
- 
+    </script>
 <div class="container">
     <div class="section">
         <div class="row">
