--- a/index.html
+++ b/index.html
@@ -497,11 +497,11 @@
             <div id="ueberschrift" class="col s12">
                 <h2> Allgemeine Daten </h2>
             </div>
-            <div class="col s6 m6 l6">
+            <div id= "ueberschrift1" class="col s6 m6 l6">
                 <h6> Bauart </h6>
                 <h6> Typ und Grösse </h6>
             </div>
-            <div class="col s6 m6 l6">
+            <div id= "ueberschrift1" class="col s6 m6 l6">
                 <h6> Axial-Shrägscheiben-Kompressor </h6>
                 <h6> AXK 800-T </h6>
             </div>
@@ -509,12 +509,12 @@
             <div id= "ueberschrift" class="col s12">
                 <h2> Eigenschaften </h2>
             </div>
-            <div class="col s6 m6 l6">
+            <div id= "ueberschrift1" class="col s6 m6 l6">
                 <h6> Vibration und Körperschall </h6>
                 <h6> Pulsation der Druckluft </h6>
                 <h6> Geräuschentwicklung </h6>
             </div>
-            <div class="col s6 m6 l6">
+            <div id= "ueberschrift1" class="col s6 m6 l6">
                 <h6> Niedrig / gut </h6>
                 <h6> Niedrig / gut </h6>
                 <h6> Niedrig / gut </h6>
