fixed header on all pages and aktuelles on index

--- a/aktuelles.html
+++ b/aktuelles.html
@@ -27,7 +27,7 @@
     <a id="logo-container" href="#" class="brand-logo">pulsmin</a>
     <div class="nav-wrapper">
 
-        <ul class="hide-on-med-and-down">
+        <ul class="hide-on-med-and-down navmid">
             <li><a class="logo" href="#">pulsmin</a></li>
             <li><a href="index.html">Start</a></li>
             <li><a href="index.html#anwendungsgebietediv">Anwendungsgebiete</a></li>
