--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
     <a id="logo-container" href="#" class="brand-logo">pulsmin</a>
     <div class="nav-wrapper">
 
-        <ul class="hide-on-med-and-down">
+        <ul class="hide-on-med-and-down navmid">
             <li><a class="logo" href="#">pulsmin</a></li>
             <li><a href="#">Start</a></li>
             <li><a href="#anwendungsgebietediv">Anwendungsgebiete</a></li>
