fixed table heights for edge browser

--- a/index.html
+++ b/index.html
@@ -494,27 +494,27 @@
 <div class="container">
     <div class="section">
         <div class="row">
-            <div id="ueberschrift" class="col s12">
+            <div class="col s12 ueberschrift">
                 <h2> Allgemeine Daten </h2>
             </div>
-            <div id= "ueberschrift1" class="col s6 m6 l6">
+            <div class="col s6 m6 l6 ueberschrift1">
                 <h6> Bauart </h6>
                 <h6> Typ und Grösse </h6>
             </div>
-            <div id= "ueberschrift1" class="col s6 m6 l6">
+            <div class="col s6 m6 l6 ueberschrift1">
                 <h6> Axial-Shrägscheiben-Kompressor </h6>
                 <h6> AXK 800-T </h6>
             </div>
             
-            <div id= "ueberschrift" class="col s12">
+            <div class="col s12 ueberschrift">
                 <h2> Eigenschaften </h2>
             </div>
-            <div id= "ueberschrift2" class="col s6 m6 l6">
+            <div class="col s6 m6 l6 ueberschrift2">
                 <h6> Vibration und Körperschall </h6>
                 <h6> Pulsation der Druckluft </h6>
                 <h6> Geräuschentwicklung </h6>
             </div>
-            <div id= "ueberschrift2" class="col s6 m6 l6">
+            <div class="col s6 m6 l6 ueberschrift2">
                 <h6> Niedrig / gut </h6>
                 <h6> Niedrig / gut </h6>
                 <h6> Niedrig / gut </h6>
