--- a/index.html
+++ b/index.html
@@ -130,7 +130,9 @@
      class="container blue1 blue1-text text-light2 titleBox fontSizeStandartTitle center-align">
     <span>Alleinstellungsmerkmale</span>
 </div>
+<div class="section">
 <div class="container">
+    <h6>Lorem ipsum</h6>
     <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore
         et dolore magna aliqua.
         Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
@@ -142,7 +144,7 @@
         Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
         consequat.</p>
 </div>
-
+</div>
 
 
 <!--Vorteile-->
