verlinken der vorteile icons

--- a/index.html
+++ b/index.html
@@ -161,26 +161,28 @@
                 <div class="section">
                     <div class="row">
                         <div class="col s2">
-                            <div class="circle" id="umweltschutz_icon">
+
+                            <div class="circle" id="umweltschutz_icon" onclick="jumptoadvantage('vorteile_container')">
                                 <img src="img/vorteile_images/icon_umweltschutz.png" class="iconimg">
                             </div>
+
                         </div>
                         <div class="col s2">
-                            <div class="circle" id="vorteile_icon2"><img src="img/vorteile_images/icon_vorteil2.png"
+                            <div class="circle" id="vorteile_icon2" onclick="jumptoadvantage('vorteil2')"><img src="img/vorteile_images/icon_vorteil2.png"
                                                                          class="iconimg">
                             </div>
                         </div>
                         <div class="col s2">
-                            <div class="circle" id="vorteile_icon3"></div>
+                            <div class="circle" id="vorteile_icon3" onclick="jumptoadvantage('vorteil3')"></div>
                         </div>
                         <div class="col s2">
-                            <div class="circle" id="vorteile_icon4"></div>
+                            <div class="circle" id="vorteile_icon4" onclick="jumptoadvantage('vorteil4')"></div>
                         </div>
                         <div class="col s2">
-                            <div class="circle" id="vorteile_icon5"></div>
+                            <div class="circle" id="vorteile_icon5" onclick="jumptoadvantage('vorteil5')"></div>
                         </div>
                         <div class="col s2">
-                            <div class="circle" id="vorteile_icon6"></div>
+                            <div class="circle" id="vorteile_icon6" onclick="jumptoadvantage('vorteil6')"></div>
                         </div>
 
                     </div>
