fixed header von den technischen Angaben

--- a/index.html
+++ b/index.html
@@ -159,11 +159,9 @@
                 <div class="section">
                     <div class="row">
                         <div class="col s2">
-
                             <div class="circle" id="umweltschutz_icon" onclick="jumptoadvantage('vorteile_container')">
                                 <img src="img/vorteile_images/icon_umweltschutz.png" class="iconimg">
                             </div>
-
                         </div>
                         <div class="col s2">
                             <div class="circle" id="vorteile_icon2" onclick="jumptoadvantage('vorteil2')"><img
@@ -512,37 +510,43 @@
     });
 </script>
 <!--Tabelle mit techn Angaben-->
-<div class="container">
+<div id="technische_angaben">
     <div class="section">
         <div class="row">
-            <div class="col s12 ueberschrift">
-                <h2> Allgemeine Daten </h2>
+            <div class="container blue1 blue1-text text-light2 titleBox fontSizeStandartTitle left-align">Allgemeine
+                Daten
             </div>
-            <div class="col s6 m6 l6 ueberschrift1">
-                <h6> Bauart </h6>
-                <h6> Typ und Grösse </h6>
+            <div class="container">
+                <div class="col s6 m6 l6 ueberschrift1">
+                    <h6> Bauart </h6>
+                    <h6> Typ und Grösse </h6>
+                </div>
+                <div class="col s6 m6 l6 ueberschrift1">
+                    <h6> Axial-Shrägscheiben-Kompressor </h6>
+                    <h6> AXK 800-T </h6>
+                </div>
             </div>
-            <div class="col s6 m6 l6 ueberschrift1">
-                <h6> Axial-Shrägscheiben-Kompressor </h6>
-                <h6> AXK 800-T </h6>
+        </div>
+        <div class="row">
+            <div class="container blue1 blue1-text text-light2 titleBox fontSizeStandartTitle left-align">
+                Eigenschaften
             </div>
-
-            <div class="col s12 ueberschrift">
-                <h2> Eigenschaften </h2>
-            </div>
-            <div class="col s6 m6 l6 ueberschrift2">
-                <h6> Vibration und Körperschall </h6>
-                <h6> Pulsation der Druckluft </h6>
-                <h6> Geräuschentwicklung </h6>
-            </div>
-            <div class="col s6 m6 l6 ueberschrift2">
-                <h6> Niedrig / gut </h6>
-                <h6> Niedrig / gut </h6>
-                <h6> Niedrig / gut </h6>
+            <div class="container">
+                <div class="col s6 m6 l6 ueberschrift2">
+                    <h6> Vibration und Körperschall </h6>
+                    <h6> Pulsation der Druckluft </h6>
+                    <h6> Geräuschentwicklung </h6>
+                </div>
+                <div class="col s6 m6 l6 ueberschrift2">
+                    <h6> Niedrig / gut </h6>
+                    <h6> Niedrig / gut </h6>
+                    <h6> Niedrig / gut </h6>
+                </div>
             </div>
         </div>
     </div>
 </div>
+
 
 <!--Aktuelles-->
 <a href="aktuelles.html">
