--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
 <!--Startbildschirm-->
 <div class="container">
     <div class="center-align">
-        <img src="img/Bild1.png" alt="Kompressor" class="responsive-img">
+        <img src="img/footer_images/Bild1.png" alt="Kompressor" class="responsive-img">
         <h1 class="center-align blue1-text">Wir reden nicht von Umweltschutz, wir machen Umweltschutz!</h1>
     </div>
 </div>
@@ -636,7 +636,8 @@
 
             <!--Spalte 4-->
             <div class="col l3 m12 s12 center-align">
-                <img src="img/Hans_Luette.jpg" alt="Hans Lütte" class="circle responsive-img size-100 z-depth-5">
+                <img src="img/footer_images/Hans_Luette.jpg" alt="Hans Lütte"
+                     class="circle responsive-img size-100 z-depth-5">
             </div>
         </div>
     </div>
@@ -649,7 +650,6 @@
     </div>
 </footer>
 
-</footer>
 <!--  Scripts-->
 <script type="text/javascript" src="js/advantages.js"></script>
 <script type="text/javascript" src="js/navbar.js"></script>
