--- a/blogposts/blogpost4/blogpost4.html
+++ b/blogposts/blogpost4/blogpost4.html
@@ -147,7 +147,7 @@
 
             <!--Spalte 4-->
             <div class="col l3 m12 s12 center-align">
-                <img src="../../img/Hans_Luette.jpg" alt="Hans Lütte" class="circle responsive-img size-100 z-depth-5">
+                <img src="../../img/footer_images/Hans_Luette.jpg" alt="Hans Lütte" class="circle responsive-img size-100 z-depth-5">
             </div>
         </div>
     </div>
